--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -28,8 +28,8 @@
 
           <nav>
             <a href="{{ site.baseurl }}/">Blog</a>
-            <a href="{{ site.baseurl }}/about">About</a>
-            <a href="{{ site.baseur1 }}/feed">RSS</a>
+            <a href="{{ site.baseurl }}/Acerca de">About</a>
+            <a href="{{ site.baseur1 }}/Educación">Education</a>
           </nav>
         </header>
       </div>
