--- a/style.scss
+++ b/style.scss
@@ -21,6 +21,7 @@ body {
 	background: $lightblue;
   font: 18px/1.4 $helvetica;
   color: $darkGray;
+  theme: jekyll-theme-architect;
 }
 
 .container {
@@ -287,5 +288,3 @@ footer {
 // ... Otherwise it really bloats up the top of the CSS file and makes it difficult to find the start
 @import "highlights";
 @import "svg-icons";
-
-theme:jekyll-theme-architect
