--- a/style.scss
+++ b/style.scss
@@ -18,10 +18,9 @@ html {
 }
 
 body {
-	background: $lightblue;
+	background: $yellow;
   font: 18px/1.4 $helvetica;
   color: $darkGray;
-  theme: jekyll-theme-architect;
 }
 
 .container {
