--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -10,7 +10,7 @@ layout: default
   </div>
 
   <div class="date">
-     {{ page.date | date: "%B %e, %Y" }}
+     Erick Choez {{ page.date | date: "%B %e, %Y" }}
   </div>
 
   {% include disqus.html %}
