--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -10,7 +10,7 @@ layout: default
   </div>
 
   <div class="date">
-     Erick Choez {{ page.date | date: "%B %e, %Y" }}
+     SOF-S-NO-1-14      Erick Choez- {{ page.date | date: "%B %e, %Y" }}
   </div>
 
   {% include disqus.html %}
