--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -30,6 +30,7 @@
             <a href="{{ site.baseurl }}/">Blog</a>
             <a href="{{ site.baseurl }}/Acerca de">Acerca de</a>
             <a href="{{ site.baseur1 }}/Educación">Educación</a>
+            <a href="{{ site.baseur1 }}/Contacto">contacto</a>
           </nav>
         </header>
       </div>
